--- a/src/app/usuarios/usuarios.page.html
+++ b/src/app/usuarios/usuarios.page.html
@@ -1,12 +1,16 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Usuários</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let usuario of listaUsuarios">
+    <ion-button (click)="logout()">Logout</ion-button>
+    <ion-item (click)="IrParaMensagens(usuario.userId)" *ngFor="let usuario of listaUsuarios">
       {{usuario.nome}}
     </ion-item>
   </ion-list>
